--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -17,6 +17,7 @@ jobs:
             --failOnCVSS 0
             --enableExperimental
       - name: Upload Test results
+        if: always()
         uses: actions/upload-artifact@master
         with:
            name: Depcheck report
