Deactivate scheduled run

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -1,8 +1,8 @@
 name: Dependency Check
 on:
   push:
-  schedule:
-    - cron: '*/5 * * * *'
+  # schedule:
+  #   - cron: '*/5 * * * *'
 jobs:
   depchecktest:
     runs-on: ubuntu-latest
