Explore with ls

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -26,3 +26,12 @@ jobs:
           name: Depcheck report
           path: ${{github.workspace}}/reports
           retention-days: 400
+      - name: ls workspace
+        if: always()
+        run: |
+          ls ${{ github.workspace }}
+      - name: pwd and ls
+        if: always()
+        run: |
+          pwd
+          ls
